--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "package.js",
   "dependencies": {
     "eventsystemx": "^1.2.0",
-    "express": "*",
-    "rect3x": "*",
-    "utilsx": "^1.13.0",
+    "express": "^4.17.1",
+    "rect3x": "^1.0.0",
+    "utilsx": "^1.14.0",
     "vectorx": "^3.3.1"
   },
   "devDependencies": {},
